--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
@@ -1702,7 +1702,7 @@ mobInfo:
                     health: 1200
     树精:
         name: "树精"
-        monsterType: "WITHER_SKELETON"
+        monsterType: "SKELETON"
         eventProgress: 4
         variants:
             南瓜月1:
