--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/sounds.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/sounds.yml
@@ -31,7 +31,7 @@ lengths:
     empress_of_light: 168809
     duke_fishron: 102633
     lunar_boss: 113178
-    goblinarmy: 105614
+    goblin_army: 105614
     eerie: 161504
     slime_rain: 83001
     pirate: 110866
