pumpkin moon and monster update
bosses of pumpkin moon; buffed strength of monsters to master difficulty; several bugfix and tweak regarding monsters.

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -148,6 +148,22 @@
     drop:
         - "镣铐:1:1:0.02"
         - "铜币:100:200:1"
+血腥僵尸:
+    drop:
+        - "铜币:150:300:1"
+        - "鲨牙项链:1:1:0.0133"
+        - "钱币槽:1:1:0.01"
+        - "血月天塔柱:1:1:0.005"
+木箭僵尸:
+    drop:
+        - "木箭:1:9:1"
+凝胶僵尸:
+    drop:
+        - "凝胶:1:3:1"
+        - "史莱姆法杖:1:1:0.00014"
+火把僵尸:
+    drop:
+        - "火把:5:20:1"
 装甲幻影魔:
     drop:
         - "铜币:500:1500:1"
@@ -336,19 +352,6 @@
     drop:
         - "铜币:250:250:1"
         - "尖刺球:1:5:0.4975"
-血腥僵尸:
-    drop:
-        - "铜币:150:300:1"
-        - "鲨牙项链:1:1:0.0133"
-        - "钱币槽:1:1:0.01"
-        - "血月天塔柱:1:1:0.005"
-木箭僵尸:
-    drop:
-        - "木箭:1:9:1"
-凝胶僵尸:
-    drop:
-        - "凝胶:1:3:1"
-        - "史莱姆法杖:1:1:0.00014"
 克苏鲁之眼:
     drop:
         - "弱效治疗药水:5:15:1"
