--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -246,53 +246,73 @@ events:
       - 0
       - 0
       '4':
-      - 1
+      - 0
       - 0
       - 0
       '5':
+      - 0
+      - 0
       - 1
-      - 0
-      - 0
       '6':
       - 2
       - 0
       - 0
       '7':
+      - 2
       - 0
-      - 1
       - 0
       '8':
       - 0
+      - 0
+      - 1
+      '9':
+      - 2
+      - 0
+      - 0
+      '10':
+      - 0
       - 1
       - 0
-      '9':
-      - 1
-      - 1
-      - 1
-      '10':
-      - 1
-      - 1
-      - 1
       '11':
       - 2
-      - 1
-      - 1
-      '12':
-      - 2
-      - 2
-      - 2
-      '13':
-      - 3
-      - 2
-      - 3
-      '14':
-      - 3
-      - 3
-      - 15
-      '15':
-      - 15
-      - 15
       - 0
+      - 0
+      '12':
+      - 0
+      - 1
+      - 0
+      '13':
+      - 2
+      - 0
+      - 2
+      '14':
+      - 0
+      - 1
+      - 1
+      '15':
+      - 2
+      - 1
+      - 0
+      '16':
+      - 0
+      - 1
+      - 2
+      '17':
+      - 2
+      - 2
+      - 2
+      '18':
+      - 2
+      - 2
+      - 3
+      '19':
+      - 3
+      - 3
+      - 5
+      '20':
+      - 4
+      - 4
+      - 2
     progress:
       '1': 25
       '2': 40
@@ -308,23 +328,33 @@ events:
       '12': 450
       '13': 525
       '14': 675
-      '15': 123456789
+      '15': 850
+      '16': 1025
+      '17': 1325
+      '18': 1550
+      '19': 2000
+      '20': 123456789
     messages:
       '1': §d§l第一波：稻草人
-      '2': §d§l第二波：稻草人和树精
-      '3': §d§l第三波：稻草人，树精和地狱犬
-      '4': §d§l第四波：稻草人，树精，地狱犬和哀木
-      '5': §d§l第五波：稻草人，树精，地狱犬，胡闹鬼和哀木
-      '6': §d§l第六波：稻草人，地狱犬，胡闹鬼和哀木
-      '7': §d§l第七波：稻草人，地狱犬，胡闹鬼和南瓜王
-      '8': §d§l第八波：树精，地狱犬，胡闹鬼和南瓜王
-      '9': §d§l第九波：稻草人，无头骑士，哀木和南瓜王
-      '10': §d§l第十波：树精，地狱犬，胡闹鬼，无头骑士，哀木和南瓜王
-      '11': §d§l第十一波：稻草人，树精，地狱犬，胡闹鬼，无头骑士，哀木和南瓜王
-      '12': §d§l第十二波：地狱犬，胡闹鬼，无头骑士，哀木和南瓜王
-      '13': §d§l第十三波：地狱犬，胡闹鬼，无头骑士，哀木和南瓜王
-      '14': §d§l第十四波：无头骑士，哀木和南瓜王
-      '15': §d§l第十五波：哀木和南瓜王
+      '2': §d§l第二波：树精和稻草人
+      '3': §d§l第三波：地狱犬和树精
+      '4': §d§l第四波：胡闹鬼，树精和稻草人
+      '5': §d§l第五波：无头骑士和地狱犬
+      '6': §d§l第六波：哀木，树精和稻草人
+      '7': §d§l第七波：哀木，胡闹鬼和地狱犬
+      '8': §d§l第八波：无头骑士，胡闹鬼和地狱犬
+      '9': §d§l第九波：哀木，胡闹鬼，地狱犬，树精和稻草人
+      '10': §d§l第十波：南瓜王，地狱犬和树精
+      '11': §d§l第十一波：哀木，胡闹鬼和树精
+      '12': §d§l第十二波：南瓜王和胡闹鬼
+      '13': §d§l第十三波：哀木，无头骑士，胡闹鬼，地狱犬和树精
+      '14': §d§l第十四波：南瓜王，哀木，无头骑士，胡闹鬼，地狱犬，树精和稻草人
+      '15': §d§l第十五波：南瓜王，哀木，胡闹鬼，树精和稻草人
+      '16': §d§l第十六波：南瓜王，无头骑士，胡闹鬼，地狱犬和树精
+      '17': §d§l第十七波：南瓜王，哀木，无头骑士，胡闹鬼和地狱犬
+      '18': §d§l第十八波：南瓜王，哀木，无头骑士和胡闹鬼
+      '19': §d§l第十九波：南瓜王，哀木和无头骑士
+      '20': §d§l第二十波：南瓜王，哀木和无头骑士
   冰霜月:
     bossMax:
       '1':
