frost moon bosses and config update

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -715,6 +715,10 @@
     buffImmute:
         - "中毒"
         - "霜火"
+寒霜波:
+    buffInflict:
+        - "冷冻|150|1"
+        - "冰冻|100|0.1654"
 神圣宝箱怪:
     drop:
         - "铜币:70000:80000:1"
