--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
@@ -521,27 +521,63 @@
 榴弹发射器:
   type: ROCKET
   autoSwing: true
-  displayName:
-    初级火箭: 初级榴弹
-    二级火箭: 二级榴弹
-    三级火箭: 三级榴弹
-    四级火箭: 四级榴弹
-    集束火箭: 集束榴弹
+  ammoConversion:
+    初级火箭:
+    - 初级榴弹
+    二级火箭:
+    - 二级榴弹
+    三级火箭: 
+    - 三级榴弹
+    四级火箭: 
+    - 四级榴弹
+    集束火箭: 
+    - 集束榴弹
 雪人炮:
   type: ROCKET
   autoSwing: true
   offSet: 49
-  displayName:
-    初级火箭: 初级雪人火箭
-    二级火箭: 二级雪人火箭
-    三级火箭: 三级雪人火箭
-    四级火箭: 四级雪人火箭
-    集束火箭: 集束雪人火箭
+  ammoConversion:
+    初级火箭: 
+    - 初级雪人火箭
+    二级火箭: 
+    - 二级雪人火箭
+    三级火箭: 
+    - 三级雪人火箭
+    四级火箭: 
+    - 四级雪人火箭
+    集束火箭: 
+    - 集束雪人火箭
 喜庆弹射器:
   type: ROCKET
   autoSwing: true
   shots: 2
   offSet: 24
+  ammoConversion:
+    初级火箭: 
+    - 红烟花火箭
+    - 黄烟花火箭
+    - 绿烟花火箭
+    - 蓝烟花火箭
+    二级火箭: 
+    - 红烟花火箭
+    - 黄烟花火箭
+    - 绿烟花火箭
+    - 蓝烟花火箭
+    三级火箭: 
+    - 红烟花火箭
+    - 黄烟花火箭
+    - 绿烟花火箭
+    - 蓝烟花火箭
+    四级火箭: 
+    - 红烟花火箭
+    - 黄烟花火箭
+    - 绿烟花火箭
+    - 蓝烟花火箭
+    集束火箭: 
+    - 红烟花火箭
+    - 黄烟花火箭
+    - 绿烟花火箭
+    - 蓝烟花火箭
 木制回力镖:
   type: BOOMERANG
   distance: 12
