config formatting and new monster

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -51,6 +51,20 @@
         - "铜币:200:250:1"
         - "腐肉:1:1:0.33"
         - "汉堡:1:1:0.01"
+秃鹰:
+    drop:
+        - "铜币:100:200:1"
+        - "荒漠之羽:1:2:1"
+蚁狮马:
+    drop:
+        - "铜币:200:400:1"
+        - "蚁狮上颚:1:2:0.33"
+风暴蚁狮:
+    buffInflict:
+        - "带电|50|1"
+    drop:
+        - "铜币:200:300:1"
+        - "风暴之颚:1:1:1"
 巫毒恶魔:
     buffInflict:
         - "失明|600|0.33"
@@ -72,13 +86,6 @@
     drop:
         - "铜币:600:1000:1"
         - "恶魔锄刀:1:1:0.015"
-红恶魔:
-    buffImmute:
-        - "燃烧"
-        - "咒火"
-    drop:
-        - "铜币:3000:3000:1"
-        - "邪恶三叉戟:1:1:0.033"
 骨蛇:
     buffImmute:
         - "燃烧"
@@ -122,28 +129,6 @@
         - "凝胶:1:3:0.5"
         - "史莱姆法杖:1:1:0.00014"
         - "铜币:50:100:1"
-尖刺史莱姆:
-    drop:
-        - "凝胶:1:1:0.5"
-        - "史莱姆法杖:1:1:0.00014"
-水晶史莱姆:
-    drop:
-        - "凝胶:1:2:1"
-        - "史莱姆法杖:1:1:0.00014"
-    buffImmute:
-        - "中毒"
-飞翔史莱姆:
-    drop:
-        - "凝胶:1:2:1"
-        - "史莱姆法杖:1:1:0.00014"
-    buffImmute:
-        - "中毒"
-弹力史莱姆:
-    drop:
-        - "凝胶:1:2:1"
-        - "史莱姆法杖:1:1:0.00014"
-    buffImmute:
-        - "中毒"
 僵尸:
     drop:
         - "镣铐:1:1:0.02"
@@ -164,6 +149,18 @@
 火把僵尸:
     drop:
         - "火把:5:20:1"
+鸟妖:
+    drop:
+        - "铜币:600:750:1"
+        - "羽毛:1:1:0.5"
+        - "巨型羽毛:1:1:0.02"
+骷髅:
+    drop:
+        - "铜币:200:400:1"
+        - "骨头:1:3:0.9807"
+        - "裁缝巫毒娃娃:1:1:0.0033"
+    buffImmute:
+        - "中毒"
 装甲幻影魔:
     drop:
         - "铜币:500:1500:1"
@@ -194,13 +191,46 @@
     drop:
         - "铜币:1000:1300:1"
         - "冰冻海龟壳:1:1:0.01"
-骷髅:
+飞龙:
     drop:
-        - "铜币:200:400:1"
-        - "骨头:1:3:0.9807"
-        - "裁缝巫毒娃娃:1:1:0.0033"
+        - "铜币:20000:30000:1"
+        - "飞翔之魂:10:20:1"
+神圣宝箱怪:
+    drop:
+        - "铜币:70000:80000:1"
+        - "强效治疗药水:5:10:1"
+        - "强效魔力药水:5:10:1"
+        - "独角兽角:2:5:1"
+        - "妖精尘:5:20:1"
     buffImmute:
         - "中毒"
+        - "燃烧"
+腐化宝箱怪:
+    drop:
+        - "铜币:70000:80000:1"
+        - "强效治疗药水:5:10:1"
+        - "强效魔力药水:5:10:1"
+        - "诅咒焰:5:10:1"
+    buffImmute:
+        - "中毒"
+        - "燃烧"
+红恶魔:
+    buffImmute:
+        - "燃烧"
+        - "咒火"
+    drop:
+        - "铜币:3000:3000:1"
+        - "邪恶三叉戟:1:1:0.033"
+蜥蜴人:
+    drop:
+        - "铜币:5000:7000:1"
+        - "丛林蜥蜴电池:1:1:0.02"
+        - "日耀碑牌碎片:1:2:0.1429"
+飞蛇:
+    drop:
+        - "铜币:5000:7000:1"
+        - "丛林蜥蜴电池:1:1:0.02"
+        - "日耀碑牌碎片:1:2:0.1429"
 装甲骷髅:
     drop:
         - "铜币:2000:3000:1"
@@ -270,47 +300,6 @@
         - "战术霰弹枪:1:1:0.1597"
     buffImmute:
         - "中毒"
-眼怪:
-    drop:
-        - "铜币:10000:15000:1"
-科学怪人:
-    drop:
-        - "铜币:1000:2000:1"
-        - "断裂英雄剑:1:1:0.004"
-沼泽怪:
-    drop:
-        - "铜币:2000:3000:1"
-        - "断裂英雄剑:1:1:0.004"
-    buffImmute:
-        - "中毒"
-吸血鬼:
-    drop:
-        - "铜币:10000:15000:1"
-        - "月亮石:1:1:0.0563"
-    buffInflict:
-        - "流血|200|1"
-水月怪:
-    drop:
-        - "铜币:2000:3000:1"
-弗里茨:
-    drop:
-        - "铜币:1000:2000:1"
-攀爬魔:
-    drop:
-        - "铜币:3000:3500:1"
-死神:
-    drop:
-        - "铜币:3500:4000:1"
-        - "死神镰刀:1:1:0.0494"
-蛾怪:
-    drop:
-        - "铜币:120000:130000:1"
-        - "断裂英雄剑:1:1:0.4375"
-        - "克苏鲁之眼:1:1:0.5555"
-致命球:
-    drop:
-        - "铜币:2000:2500:1"
-        - "致命球法杖:1:1:0.0494"
 地牢幽魂:
     drop:
         - "铜币:1000:1500:1"
@@ -321,37 +310,6 @@
         - "霜火"
         - "咒火"
         - "燃烧"
-鸟妖:
-    drop:
-        - "铜币:600:750:1"
-        - "羽毛:1:1:0.5"
-        - "巨型羽毛:1:1:0.02"
-蜥蜴人:
-    drop:
-        - "铜币:5000:7000:1"
-        - "丛林蜥蜴电池:1:1:0.02"
-        - "日耀碑牌碎片:1:2:0.1429"
-飞蛇:
-    drop:
-        - "铜币:5000:7000:1"
-        - "丛林蜥蜴电池:1:1:0.02"
-        - "日耀碑牌碎片:1:2:0.1429"
-哥布林战士:
-    drop:
-        - "铜币:375:375:1"
-        - "尖刺球:1:5:0.4975"
-哥布林弓箭手:
-    drop:
-        - "铜币:200:200:1"
-        - "尖刺球:1:5:0.4975"
-哥布林盗贼:
-    drop:
-        - "铜币:500:500:1"
-        - "尖刺球:1:5:0.4975"
-哥布林苦力:
-    drop:
-        - "铜币:250:250:1"
-        - "尖刺球:1:5:0.4975"
 克苏鲁之眼:
     drop:
         - "弱效治疗药水:5:15:1"
@@ -360,6 +318,10 @@
     drop:
         - "弱效治疗药水:5:15:1"
         - "铜币:25000:25000:1"
+尖刺史莱姆:
+    drop:
+        - "凝胶:1:1:0.5"
+        - "史莱姆法杖:1:1:0.00014"
 世界吞噬者:
     drop:
         - "铜币:500:800:1"
@@ -405,6 +367,24 @@
     drop:
         - "强效治疗药水:5:15:1"
         - "铜币:50000:50000:1"
+水晶史莱姆:
+    drop:
+        - "凝胶:1:2:1"
+        - "史莱姆法杖:1:1:0.00014"
+    buffImmute:
+        - "中毒"
+飞翔史莱姆:
+    drop:
+        - "凝胶:1:2:1"
+        - "史莱姆法杖:1:1:0.00014"
+    buffImmute:
+        - "中毒"
+弹力史莱姆:
+    drop:
+        - "凝胶:1:2:1"
+        - "史莱姆法杖:1:1:0.00014"
+    buffImmute:
+        - "中毒"
 毁灭者:
     buffImmute:
         - "中毒"
@@ -568,46 +548,63 @@
         - "冰冻|20|1"
         - "冷冻|40|1"
         - "霜火|80|1"
-冰球:
-    buffInflict:
-        - "冰冻|20|1"
-        - "冷冻|40|1"
-        - "霜火|80|1"
-飞龙:
+哥布林战士:
     drop:
-        - "铜币:20000:30000:1"
-        - "飞翔之魂:10:20:1"
-日耀柱:
+        - "铜币:375:375:1"
+        - "尖刺球:1:5:0.4975"
+哥布林弓箭手:
+    drop:
+        - "铜币:200:200:1"
+        - "尖刺球:1:5:0.4975"
+哥布林盗贼:
+    drop:
+        - "铜币:500:500:1"
+        - "尖刺球:1:5:0.4975"
+哥布林苦力:
+    drop:
+        - "铜币:250:250:1"
+        - "尖刺球:1:5:0.4975"
+眼怪:
+    drop:
+        - "铜币:10000:15000:1"
+科学怪人:
+    drop:
+        - "铜币:1000:2000:1"
+        - "断裂英雄剑:1:1:0.004"
+沼泽怪:
+    drop:
+        - "铜币:2000:3000:1"
+        - "断裂英雄剑:1:1:0.004"
     buffImmute:
         - "中毒"
-        - "剧毒"
-        - "霜火"
-        - "咒火"
-        - "燃烧"
-星璇柱:
-    buffImmute:
-        - "中毒"
-        - "剧毒"
-        - "霜火"
-        - "咒火"
-        - "燃烧"
-星云柱:
-    buffImmute:
-        - "中毒"
-        - "剧毒"
-        - "霜火"
-        - "咒火"
-        - "燃烧"
-星尘柱:
-    buffImmute:
-        - "中毒"
-        - "剧毒"
-        - "霜火"
-        - "咒火"
-        - "燃烧"
-吮脑怪:
+吸血鬼:
+    drop:
+        - "铜币:10000:15000:1"
+        - "月亮石:1:1:0.0563"
     buffInflict:
-        - "阻塞|200|1"
+        - "流血|200|1"
+水月怪:
+    drop:
+        - "铜币:2000:3000:1"
+弗里茨:
+    drop:
+        - "铜币:1000:2000:1"
+攀爬魔:
+    drop:
+        - "铜币:3000:3500:1"
+死神:
+    drop:
+        - "铜币:3500:4000:1"
+        - "死神镰刀:1:1:0.0494"
+蛾怪:
+    drop:
+        - "铜币:120000:130000:1"
+        - "断裂英雄剑:1:1:0.4375"
+        - "克苏鲁之眼:1:1:0.5555"
+致命球:
+    drop:
+        - "铜币:2000:2500:1"
+        - "致命球法杖:1:1:0.0494"
 稻草人:
     drop:
         - "铜币:2000:3000:1"
@@ -719,22 +716,34 @@
     buffInflict:
         - "冷冻|150|1"
         - "冰冻|100|0.1654"
-神圣宝箱怪:
-    drop:
-        - "铜币:70000:80000:1"
-        - "强效治疗药水:5:10:1"
-        - "强效魔力药水:5:10:1"
-        - "独角兽角:2:5:1"
-        - "妖精尘:5:20:1"
+日耀柱:
     buffImmute:
         - "中毒"
+        - "剧毒"
+        - "霜火"
+        - "咒火"
         - "燃烧"
-腐化宝箱怪:
-    drop:
-        - "铜币:70000:80000:1"
-        - "强效治疗药水:5:10:1"
-        - "强效魔力药水:5:10:1"
-        - "诅咒焰:5:10:1"
+星璇柱:
     buffImmute:
         - "中毒"
+        - "剧毒"
+        - "霜火"
+        - "咒火"
         - "燃烧"
+星云柱:
+    buffImmute:
+        - "中毒"
+        - "剧毒"
+        - "霜火"
+        - "咒火"
+        - "燃烧"
+星尘柱:
+    buffImmute:
+        - "中毒"
+        - "剧毒"
+        - "霜火"
+        - "咒火"
+        - "燃烧"
+吮脑怪:
+    buffInflict:
+        - "阻塞|200|1"
